--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
 </head>
 <body>
-	<div></div>	
+	<div id="player1"></div>
+	<div id="player2"></div>
+	<div id="finish"></div>
 </body>
 </html>
