--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <div class='container'>
       <div class='row'>
         <div id='bunny-lane' class='col-lg-12 col-md-12 col-sm-12'>
-          <div class='bunny'>🐰</div>
+          <div class='bunny'>
+            <h1 class='text-center'>🐰</h1>
+          </div>
         </div>
       </div>
     </div>
@@ -26,7 +28,9 @@
     <div class='container'>
       <div class='row'>
         <div id='turtle-lane' class='col-lg-12 col-md-12 col-sm-12'>
-            <div class='turtle'>🐢</div>
+            <div class='turtle'>
+              <h1 class='text-center'>🐢</h1>
+              </div>
           </div>
       </div>
     </div>
