Added images and styles of race track

--- a/index.html
+++ b/index.html
@@ -19,8 +19,25 @@
 
 </head>
 <body>
-	<div id="player1"></div>
-	<div id="player2"></div>
-	<div id="finish"></div>
+	<div class="container-fluid d-flex flex-wrap ">
+		<div class="audience d-flex align-items-end">
+			<div class="barrier"></div>
+		</div>
+		
+
+		<div class="road">
+			<div id="player1"></div>
+			<div id="player2"></div>
+			<div id="finish"></div>
+			
+			<span class="line">um</span>
+			<span class="line"></span>
+			<span class="line"></span>
+			<span class="line"></span>
+
+		</div>
+	</div>
+	
+	
 </body>
 </html>
