--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
       crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cookie|Dancing+Script|Homemade+Apple"
+      rel="stylesheet">
 
   </head>
   <body>
 
-    <h1 class='text-center'> RACING GAME</h1>
+    <h1 class='text-center'> Racing Game</h1>
+
     <div class='container'>
       <div class='row'>
         <div id='bunny-lane' class='col-lg-12 col-md-12 col-sm-12'>
