More styles, I've finished the audience section and am positioning the cars on the road

--- a/index.html
+++ b/index.html
@@ -19,21 +19,25 @@
 
 </head>
 <body>
-	<div class="container-fluid d-flex flex-wrap ">
+	<div class="container-fluid">
 		<div class="audience d-flex align-items-end">
 			<div class="barrier"></div>
 		</div>
 		
 
 		<div class="road">
-			<div id="player1"></div>
-			<div id="player2"></div>
+			
+			<div class="lines">
+				<span class="line"></span>
+				<span class="line"></span>
+				<span class="line"></span>
+				<span class="line"></span>
+			</div>
+			<div class="car" id="player1"></div>
+			<div class="car" id="player2"></div>
 			<div id="finish"></div>
 			
-			<span class="line">um</span>
-			<span class="line"></span>
-			<span class="line"></span>
-			<span class="line"></span>
+			
 
 		</div>
 	</div>
