Added car numbers and drivers, fixed more styling

--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
 				<span class="line"></span>
 				<span class="line"></span>
 				<span class="line"></span>
+				<span class="line"></span>
 			</div>
 			<div class="car" id="player1"></div>
 			<div class="car" id="player2"></div>
 			<div id="finish"></div>
-			
-			
-
 		</div>
+		
 	</div>
 	
 	
