--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/animate.css">
 	
 	<!-- JAVASCRIPT -->
 	<script
@@ -39,6 +40,21 @@
 			<div id="finish"></div>
 		</div>
 		
+		<div class="row">
+			<div class="info col-md-4">
+				<h3>Instructions</h3>
+				<p>Player 1, press the J key to move.</p>
+				<p>Player 2, press the D key to move.</p>
+				<p>Ready, set, go!</p>
+			</div>
+			<div class="status col-md-8">
+				<h2 class="winner"></h2>
+				<button class="btn btn-primary">New Game</button>
+			</div>
+		</div>
+		
+
+
 	</div>
 
 
